--- a/src/pages/Fiber/fiber.scss
+++ b/src/pages/Fiber/fiber.scss
@@ -3,6 +3,7 @@
 section.fiber {
     background-color: var(--bg);
     transition: background-color $transition-theme;
+	flex-grow: 1;
 	
 	& .fiber {
 		width: 100%;
