--- a/src/components/ThemeSwitcher/themeSwitcher.scss
+++ b/src/components/ThemeSwitcher/themeSwitcher.scss
@@ -10,17 +10,16 @@
     height: 40px;
     overflow: hidden;
     z-index: 5500;
+    transition: transform $transition_nav, right $transition_nav 0.3s;
 
     @include respond-to(sm) {
         transform: scale(0.85);
-        top: 20px;
-        right: 10px;
+        top: calc($header_height + 55px);
+        right: 25%;
     }
 
     @include respond-to(xs) {
         transform: scale(0.7);
-        top: 10px;
-        right: 0px;
     }
 
     & input {
@@ -31,6 +30,13 @@
     & > .theme-switcher {
         width: 100%;
         height: 100%;
+    }
+
+    &.hide {
+        @include respond-to(sm) {
+            right: 35%;
+            transform: translateY(-$nav_height);
+        }
     }
 }
 
