--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -3,6 +3,7 @@
 section.order {
     background-color: var(--bg);
     transition: background-color $transition-theme;
+    flex-grow: 1;
 
     & .page_order {
       
@@ -13,7 +14,7 @@ section.order {
     
         .order__block {
             display: flex;
-            margin-top: 30px;
+            //margin-top: 30px;
             justify-content: center;
             
             & > .img__container {
@@ -30,7 +31,7 @@ section.order {
     
             .order__container {
                 width: 80%;
-                padding: 30px 30px;
+                padding: 50px 50px;
                 //padding-left: 50px;
                 margin: 40px 0;
                 border-radius: 10px;
@@ -44,35 +45,45 @@ section.order {
     
                 @include respond-to(sm) {
                     width: 100%;
-                    margin-top: 0px;
+                   // margin-top: 0px;
                 }
     
                 & > h2 {
-                        text-align: center;
+                    text-align: center;
                     color: var(--text);
                     font-family: Nunito;
                 }
     
                 & > .data-block {
+                    margin-top: 20px;
                     width: 100%;
                     display: flex;
                     align-items: stretch;
                     justify-content: space-between;
 
+                    @include respond-to(sm) {
+                        flex-direction: column;
+                    }
+
                     & .inputs-block {
                         width: 50%;
                         display: flex;
                         flex-direction: column;
+
+                        
+                        @include respond-to(sm) {
+                            width: 100%;
+                        }
                     }
 
 
                     & .input-block {
                         width: 100%;
                         //margin-top: 15px;
-                        padding-top: 15px;
+                        padding-top: 25px;
                         
                         @include respond-to(sm) {
-                            margin-top: 25px;
+                            margin-top: 10px;
                         }
 
                         &.message-block {
@@ -90,7 +101,7 @@ section.order {
                         }
         
                         & input {
-                            margin-top: 3px;
+                            margin-top: 5px;
                             font-size: 20px;
                             color: black;
                             font-weight: 600;
@@ -142,6 +153,11 @@ section.order {
 
                     & > .files-block {
                         width: 45%;
+
+                        
+                        @include respond-to(sm) {
+                            width: 100%;
+                        }
                         
                         & .input-block.files {
                             height: 100%;
@@ -162,11 +178,12 @@ section.order {
                                 flex-direction: column;
                                 align-items: center;
                                 justify-content: center;
-                                padding-bottom: 20px;
-                                padding-top: 30px;
+                                //padding-bottom: 20px;
+                                //padding-top: 30px;
                                 border-radius: 4px;
                                 background-color: var(--main_vv);
                                 transition: background-color $transition_theme;
+                                padding: 30px 20px;
         
                                 & > svg {
                                     fill: $light;
@@ -178,6 +195,7 @@ section.order {
                                     display: flex;
                                     justify-content: center;
                                     align-items: center;
+                                    flex-direction: column;
         
                                     @include respond-to(md) {
                                         flex-direction: column;
@@ -192,7 +210,8 @@ section.order {
             
                                     & span {
                                         color: $light;
-                                        margin-left: .5rem;
+                                        text-align: center;
+                                        //margin-left: .5rem;
                                         @include respond-to(sm) {
                                             display: none;
                                         }
@@ -202,7 +221,7 @@ section.order {
                                 & > .preview-gallery {
                                     display: flex;
                                     flex-wrap: wrap;
-                                    padding: 0 20px;
+                                    //padding: 0 20px;
                                     gap: 20px;
                                     margin-top: 20px;
                                     //border: 1px solid red;
@@ -214,7 +233,8 @@ section.order {
                                         display: flex;
                                         flex-direction: column;
                                         align-items: center;
-                                        width: 100px;
+                                        width: 80px;
+                                        overflow: hidden;
                                         
                                         & > div {
                                             height: 100px;
@@ -274,11 +294,19 @@ section.order {
                     padding: 12px 10%;
                     border: none;
                     border-radius: 4px;
-                    margin-top: 20px;
+                    margin-top: 40px;
                     color: $dark;
                     font-weight: 700;
                     cursor: pointer;
                     text-transform: uppercase;
+
+                    @include respond-to(sm) {
+                        margin-top: 30px;
+                    }
+
+                    @include respond-to(xs) {
+                        width: 100%;
+                    }
     
                     &:hover {
                         box-shadow: 0px 0px 20px var(--main_vv);
