--- a/src/pages/Tech/tech.scss
+++ b/src/pages/Tech/tech.scss
@@ -3,7 +3,8 @@
 section.tech {
     background-color: var(--bg);
     transition: background-color $transition-theme;
-
+    flex-grow: 1;
+    
     & .tech {
         width: 100%;
     
