--- a/src/partials/Footer/footer.scss
+++ b/src/partials/Footer/footer.scss
@@ -6,6 +6,11 @@ footer {
     height: 60px;
     background-color: var(--main);
     transition: background-color $transition-theme;
+    
+    @include respond-to(sm) {
+        height: auto;
+        padding: 30px 0;
+    }
 
     & .footer__content {
         width: 100%;
@@ -14,39 +19,64 @@ footer {
         align-items: center;
         justify-content: space-between;
 
+        @include respond-to(xs) {
+            flex-direction: column-reverse;
+        }
+
+
 
         & .footer__copyright {
-            color: var(--text_contrast);
+            color: var(--text);
             transition: color $transition-theme;
             font-size: 18px;
             font-weight: 700;
+            text-align: center;
+            
+            @include respond-to(xs) {
+                margin-top: 30px;
+            }
         }
 
         & .footer__social {
             display: flex;
             gap: 30px;
             align-items: center;
+
+            @include respond-to(sm) {
+                flex-direction: column;
+                gap: 20px;
+            }
             
             & > span {
                 font-size: 18px;
-                color: var(--text_contrast);
+                color: var(--text);
                 transition: color $transition-theme;
                 font-weight: 700;
+                text-align: center;
             }
 
 
             & .social_links {
                 display: flex;
                 gap: 20px;
+
+                @include respond-to(sm) {
+                    gap: 30px;
+                }
                 
                 & a {
                     height: 30px;
                     width: auto;
 
+                    @include respond-to(sm) {
+                        height: 40px;
+                    }
+
                     & > img {
                         height: 100%;
                         width: 100%;
                         object-fit: contain;
+
                     }
                 }
             }
