--- a/src/partials/Header/header.scss
+++ b/src/partials/Header/header.scss
@@ -2,19 +2,22 @@
 
 header {
     width: 100%;
-    height: 80px;
+    height: $header_height;
     background-color: var(--main);
     transition: background-color $transition-theme;
     position: sticky;
     top: 0;
     z-index: 5000;
-    border-bottom: 1px solid #333;
+    border-bottom: 2px solid var(--main_vv);
+    //box-shadow: 0px 3px 3px var(--main);
     
     & .header__content {
         display: flex;
         align-items: center;
         justify-content: space-between;
         height: 100%;
+        background-color: var(--main);
+        transition: $transition_theme;
 
 
         & .logo-link {
