--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -1,5 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
+
+
 .nav_desktop {
     //border: 1px solid red;
     height: 100%;
@@ -28,50 +30,24 @@
         & > ul {
             height: 100%;
             margin-right: 90px;
-            //border: 1px solid blue;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            gap: 1.8rem;
+            gap: 40px;
             font-weight: 600;
-            //padding-left: 10px;
-            //padding-right: 10px;
 
             @include respond-to(md) {
-                gap: 1.2rem;
+                gap: 30px;
             }
     
     
             & > li {
                 font-size: 1.4rem;
                 position: relative;
-                //border-top: 2px solid #333;
 
-                /*&::before {
-                    position: absolute;
-                    content: "";
-                    background-color: #000;*/
-                    /*width: 3px;
-                    height: 30px;
-                    left: 50%;
-                    top: -100%;*/
-                    /*width: 1px;
-                    height: 40px;
-                    left: 0%;
-                    bottom: 50%;
-                }*/
-                /*&::before {
-                    position: absolute;
-                    content: "";
-                    background-color: #333;
-                    width: 2px;
-                    height: 30px;
-                    left: 50%;
-                    top: -100%;
-                }*/
 
                 @include respond-to(md) {
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                 }
 
                 & > a {
@@ -84,34 +60,11 @@
                     text-transform: uppercase;
                     transition: $transition_nav_menu;
                     display: block;
+                    font-weight: 700;
                     
-                   /* &::before  { //&::after
-                        content: '';
-                        width: 8px;
-                        height: 10px;
-                        position: absolute;
-                        top: 50%;
-                        transform: translate(0, -50%);
-                        border-radius: 5px;
-                    }
-                    
-                    &::before {
-                        left: 0;
-                        border-left: 2px solid #000;
-                    }*/
-                    
-                    /*&::after { 
-                        border-right: 2px solid #000;
-                        right: 0;                    
-                    }   */
-
-
-
                     &:hover {
                         color: var(--text_contrast);
                         transition: color $transition-theme;
-
-                        //transform: translateY(12px);
                     }
 
                     &.selected {
@@ -254,6 +207,303 @@
             
             & > img {
                 transform: rotate(-840deg);
+            }
+            
+        }
+        
+        
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.nav_mobile {
+    height: 100%;
+    display: none;
+    align-items: center;
+
+    @include respond-to(sm) {
+        display: flex;
+    }
+
+
+
+
+    & .nav__container {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        transform: translateY(-100%);
+        display: flex;
+        align-items: stretch;
+        transition: $transition_nav;
+        width: calc(100% - 20px * 2);
+        background-color: var(--main);
+        margin-left: 20px;
+        margin-right: 20px;
+        z-index: -1;
+        height: ($nav_height);
+        width: calc(100% - 40px);
+
+        & > .right-line {
+            width: 10px;
+            margin-left: auto;
+            z-index: 7000;
+            position: absolute;
+            right: 0px;
+            height: 100%;
+        }
+
+        & > ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            font-weight: 600;
+            //padding-top: 80px;
+            padding-bottom: 50px;
+            height: 100%;
+            width: 100%;
+            border-top: 2px solid var(--main_vv);
+
+            &::before {
+                content: '';
+                height: 70px;
+                width: 80%;
+                margin-top: 40px;
+                margin-bottom: 20px;
+                background-color: var(--main_vv);
+                transition:  background-color $transition_theme;
+                border-radius: 40px;
+            }
+    
+    
+            & > li {
+                
+                & > a {
+                    font-size: 2.4rem;
+                    position: relative;
+                    transition: 1s;
+                    color: var(--text);
+                    transition: color $transition-theme;
+                    text-transform: uppercase;
+                    transition: $transition_nav_menu;
+                    display: block;
+
+
+                    &:hover {
+                        color: var(--text_contrast);
+                        transition: color $transition-theme;
+
+                        //transform: translateY(12px);
+                    }
+
+                    &.selected {
+                        color: var(--text_contrast);
+                        transition: color $transition-theme;
+                    }
+                }
+            }
+
+            & > .line {
+                width: 20%;
+                height: 2px;
+                background-color: var(--main_vv);
+
+                &:last-child {
+                    display: none;
+                }
+            }
+        }
+
+    }
+
+    & .nav__container_right {
+        position: absolute;
+        top: calc(100%);
+        right: 0;
+        margin-right: 20px;
+        transform: translateY(-100%);
+        transition: $transition_nav;
+        width: 10px;
+        background-color: transparent;
+        background-image: url('../../assets/img/nav_line_right.png');
+        background-size: 8px;
+        background-repeat: repeat-y;
+        background-position-x: right;
+        height: calc($nav_height + $header_height);
+        z-index: 100;
+    }
+    
+    & .nav__switcher {
+        right: 0;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & .text-hider {
+            position: absolute;
+            width: 100%;
+            height: 70%;
+            background-color: var(--main);
+            transition: background-color $transition-theme;
+
+        }
+        
+        & > label {
+            z-index: 200;
+            height: 100%;
+            cursor: pointer;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            
+            & > input {
+                visibility: hidden;
+                position: absolute;
+            }
+            
+            & > img {
+                height: 100%;
+                transform: rotate(13deg);
+                transition: $transition_nav;
+            }
+
+
+            & .nav__sign {
+                height: 50px;
+                position: absolute;
+           
+                span {
+                    margin: 0 auto;
+                    position: relative;
+                    top: 50%;
+                    transform: translateY(-50%);
+                
+                    transition-duration: 0s;
+                    transition-delay: 0.5s;
+                
+                    &:before,
+                    &:after {
+                        position: absolute;
+                        content: '';
+                        transition-property: margin, transform;
+                        transition-duration: 0.5s;
+                        transition-delay: 0.5s, 0s;
+                    }
+                
+                    &:before { margin-top: -10px; }
+                    &:after { margin-top: 10px; }
+
+                }
+            
+                span,
+                span:before,
+                span:after {
+                    width: 30px;
+                    height: 3px;
+                    background-color: #000;
+                    display: block;
+                    border-radius: 2px;
+                }
+            }
+
+
+        }
+    }
+
+
+
+
+
+    &.opened {
+        
+        & .nav__container {
+            transform: translateY(0);
+        } 
+
+        & .nav__container_right {
+            transform: translateY(-$header_height);
+        } 
+
+        & .nav__switcher > label {
+            
+            & .nav__sign {
+                & span {
+                    transition-delay: 0.5s;
+                    background-color: rgba(0,0,0,0);
+
+                    &:before {
+                        margin-top: 0;
+                        transform: rotate(45deg);
+                        transition-delay: 0s, 0.5s;
+                    }
+                
+                    &:after {
+                        margin-top: 0;
+                        transform: rotate(-45deg);
+                        transition-delay: 0s, 0.5s;
+                    }
+                }
+            }
+            
+            & > img {
+                transform: rotate(540deg);
             }
             
         }
