mobile nav styles modified

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -18,6 +18,7 @@ $nav: #333;
 $nav_selected: #EEE;
 
 $transition_nav: .5s ease-in-out;
+$transition_nav-time: .5s;
 $transition_nav_menu: .5s ease-in-out;
 $transition-theme: 1s;
 $light: #EBEBEB;
