--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -141,9 +141,10 @@
                             &:after {
                                 position: absolute;
                                 content: '';
-                                transition-property: margin, transform;
+                                /*transition-property: margin, transform;
                                 transition-duration: 0.5s;
-                                transition-delay: 0.5s, 0s;
+                                transition-delay: 0.5s, 0s;*/
+                                transition: margin 0.5s 0.5s, transform 0.5s 0s;
                             }
                         
                             &:before { margin-top: -10px; }
@@ -278,7 +279,17 @@
         display: flex;
     }
 
-
+    & > .blur {
+        height: 0;
+        width: 100%;
+        //top: calc(100% + 2px);
+        top: 100%;
+        left: 0;
+        z-index: -1;
+        position: absolute;
+        background-color: rgba(#333, 0);
+        transition: background-color $transition_nav 0s, height $transition_nav $transition_nav-time;
+    }
 
 
     & .nav__container {
@@ -296,6 +307,7 @@
         z-index: -1;
         height: ($nav_height);
         width: calc(100% - 40px);
+
 
         & > .right-line {
             width: 10px;
@@ -316,7 +328,10 @@
             padding-bottom: 50px;
             height: 100%;
             width: 100%;
+            border-left: 4px solid var(--main_vv);
+            border-bottom: 4px solid var(--main_vv);
             border-top: 2px solid var(--main_vv);
+            //box-shadow: 0px 0px 3px 0px var(--main_vv);;
 
             &::before {
                 content: '';
@@ -472,6 +487,12 @@
 
 
     &.opened {
+
+        & .blur {
+            height: 100vh;
+            background-color: rgba(#333, 0.9);
+            transition: background-color $transition_nav, height 0s 0s;
+        }
         
         & .nav__container {
             transform: translateY(0);
