--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -100,7 +100,7 @@ section.order {
                             font-weight: 700;
                         }
         
-                        & input {
+                        & .input-element {
                             margin-top: 5px;
                             font-size: 20px;
                             color: black;
@@ -108,25 +108,21 @@ section.order {
                             padding: 5px 10px;
                             width: 100%;
                             border-radius: 4px;
-                            border: none;
                             background-color: var(--inputs-bg);
-                            transition: background-color $transition-theme;
+                            transition: background-color $transition-theme, border $transition-theme;
+                            outline: none;
+                            border: 2px solid transparent;
+
+                            
+                            &:focus{
+                                border: 2px solid $dark;
+                            }
                         }
         
                         & textarea {
                             flex-grow: 1;
-                            margin-top: 3px;
-                            font-size: 20px;
-                            color: black;
-                            font-weight: 600;
-                            padding: 5px 10px;
-                            width: 100%;
-                            border-radius: 4px;
-                            border: none;
                             resize: vertical;
                             height: 8rem;
-                            background-color: var(--inputs-bg);
-                            transition: background-color $transition-theme;
                             vertical-align: bottom;
                         }
            
@@ -135,7 +131,7 @@ section.order {
         
                         &.error {
                             & > label {
-                                color: $color_danger;
+                                //color: $color_danger;
                             }
         
                             & > input, textarea {
@@ -237,14 +233,19 @@ section.order {
                                         align-items: center;
                                         width: 80px;
                                         overflow: hidden;
-                                        
+
                                         & > div {
                                             height: 80px;
                                             width: 100%;
+                                            display: flex;
+                                            align-items: center;
+                                            justify-content: center;
+
+
                                             
                                             & > img {
                                                 width: 100%;
-                                                height: 100%;
+                                                //height: 100%;
                                                 object-fit: cover;
                                             }
         
@@ -255,6 +256,8 @@ section.order {
                                             font-size: 14px;
                                             text-align: center;
                                             color: $light;
+                                            //word-break: break-all;
+                                            hyphens:auto
                                         }
                                     }
         
@@ -267,9 +270,16 @@ section.order {
                                     height: 20px;
                                     width: 20px;
                                     cursor: pointer;
+                                    transition: transform $transition_fast;
                                     
                                     & > img {
                                         fill: white;
+                                        height: 100%;
+                                        width: 100%;
+                                    }
+
+                                    &:hover {
+                                        transform: scale(1.3);
                                     }
                                 }
         
