--- a/src/pages/Portfolio/portfolio.scss
+++ b/src/pages/Portfolio/portfolio.scss
@@ -4,55 +4,50 @@ section.portfolio {
     background-color: var(--bg);
     transition: background-color $transition-theme;
     flex-grow: 1;
-    
-    & .portfolio__hero {
-        text-align: center;
-        margin-top: 60px;
 
-        .hero__descr {
+    & > .container {
+
+    
+        & > h2 {
+            text-align: center;
+            margin-top: 140px;
+            color: var(--main_vv);
+            margin-left: 150px;
+
+            @include respond-to(sm) {
+                margin-top: 90px;
+                margin-left: 0;
+            }
+        }
+    
+        .splider_portfolio__main {
+            height: 600px;
+            margin-top: 50px;
+            margin-bottom: 100px;
             display: flex;
-            align-items: center;
-            padding-top: 40px;
-
-            & > img {
-                max-width: 45%;
-                border-radius: 15px;
+            align-items: stretch;
+            width: 100%;
+            position: relative;
+        
+       
+            @include respond-to(md) {
+                height: 500px;
             }
-
-            & .hero__descr__text {
-                max-width: 50%;
-                margin-left: clamp(40px, 5%, 80px);
-
-                & ul {
-                    text-align: left;
-                    list-style-type: disc;
-                }
+        
+            @include respond-to(sm) {
+                margin-top: 40px;
+                height: auto;
+                flex-direction: column;
             }
-
+    
+    
         }
+    
+    
+    
+    
     }
-
-    .splider_portfolio__main {
-        height: 600px;
-        margin-top: 100px;
-        margin-bottom: 100px;
-        display: flex;
-        align-items: stretch;
-    
-        @include respond-to(lg) {
-            min-height: 376px;
-        }
-    
-        @include respond-to(md) {
-            min-height: 320px;
-        }
-    
-        @include respond-to(sm) {
-            min-height: 400px;
-        }
-    }
-
-
 
 
 }
+    
