--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -26,7 +26,7 @@ $transition-theme: 1s;
 $transition_gallery: 0.2s ease-out;
 $light: #EBEBEB;
 $dark: #286181;
-
+$color_error: red;
 $header_height: 80px;
 $nav_height: 550px;
 
