--- a/src/components/MessageInfo/message_info.scss
+++ b/src/components/MessageInfo/message_info.scss
@@ -8,6 +8,13 @@
     background-color: var(--main);
     border-radius: 15px;
     margin: 30px;
+    max-width: min(850px, 80%);
+
+    @include respond-to(xs) {
+        max-width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
     & .text-block {
         border-radius: 10px;
@@ -39,5 +46,11 @@
         cursor: pointer;
         text-transform: uppercase;
         margin-left: auto;
+    }
+
+    &.error {
+        & > h3 {
+            color: $color_error;
+        }
     }
 }
