--- a/src/components/Spliders/Single/splider-single.scss
+++ b/src/components/Spliders/Single/splider-single.scss
@@ -4,6 +4,7 @@
 .splider_single__container {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     
     & > .splider_single {
@@ -23,14 +24,18 @@
         
         & .splide__arrows { 
             width: 100%;
-            height: 100%;
             position: absolute;
+            top: calc(100% + 5px);
+            height: fit-content;
+
             & .splide__arrow {
                 background-color: transparent;
                 transition: $transition_base;
                 //height: 100%;
                 border-radius: 0;
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                transform: translate(0, 0);
+
                 &:disabled {
                     width: 0;
                 }
@@ -46,6 +51,8 @@
                         fill: var(--main_vv);
                     }
                 }
+ 
+
                 &--prev:hover {
                     & svg {
                         translate: -10px;
@@ -58,45 +65,53 @@
                 }
             }
         }
+
+
         & .splide__track {
             height: 100%;
             & > ul {
+                width: 100%;
                 
                 &  > li {
+                    width: 100%;
                     display: flex;
                     align-items: center;
-                    justify-content: center;
-    
-                    & .splide__slide-container {
-                        height: 100%;
-                        
-                        & > img {
-                            //cursor: zoom-in;
-                            cursor: pointer;
-                            height: 100%;
-                            width: 100%;
-                            object-fit: contain;
-                        }
-                    }
+                    justify-content: center;                   
                 }
             }
         }
-        & .splide__pagination {
+
+
+        & .splide__pagination--custom {
+           bottom: unset;
 
             @include respond-to(xs) {
-                display: none;
+                //display: none;
             }
 
             & .splide__pagination__page  {
-                background-color: rgba(var(--main_vv_RGB), 0.8);
-                margin: 7px;
+                font-size: 20px;
+                background-color: transparent;
+                margin: 0px 12px;
+                height: auto;
+                width: auto;
+                color: var(--main_vv);
+                font-weight: 700;
+
                 @include respond-to(xs) {
                     width: 15px;
                     height: 15px;
                     margin: 10px;
                 }
+
+
                 &.is-active {
-                    background-color: rgba(var(--main_vv_RGB), 0.95);
+                    font-size: 32px;
+                    opacity: 1;
+                    font-weight: 800;
+                    transform: none;
+                    color: var(--lang-text_add);
+                    //background-color: rgba(var(--main_vv_RGB), 0.95);
                 }
             }
         }
