--- a/src/components/Preloader/preloader.scss
+++ b/src/components/Preloader/preloader.scss
@@ -1,9 +1,9 @@
 .preloader {
-    border: 8px solid #0968b5;
+    border: 6px solid #0968b5;
     border-radius: 50%;
-    //width: 20%;
-    width: min(20cqw, 20cqh);
-    //height: 20%;
+    width: 20%;
+    aspect-ratio: 1;
+    //width: min(20cqw, 20cqh);
     aspect-ratio: 1;
     position: absolute;
     top: 50%;
