--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -7,84 +7,89 @@
     display: flex;
     flex-wrap: wrap;
 
-
-    & > .gallery__item {
+    & > a {
         width: 25%;
         height: 45%;
         margin: 0px 4%;
         cursor: pointer;
         border: 1px solid var(--main_vv);
         border-radius: 5px;
-        
-        & > .img__container {
+
+        & .gallery__item {
             width: 100%;
-            height: 50%;
-            position: relative;
+            height: 100%;
             
-            & > img {
-                height: 100%;
+            & > .img__container {
                 width: 100%;
-                object-fit: cover;
+                height: 50%;
+                position: relative;
+                
+                & > img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
             }
-        }
-
-        & > .descr__container {
-            padding: 10px;
-
-            & .name {
-                display: inline-block;
-                font-size: 20px;
-                color: var(--main_vv);
-                font-weight: 700;
-                text-align: left;
-                width: 100%;
-            }
-
-            & > .colors__container {
-                margin-top: 7px;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                flex-wrap: wrap;
-
-                & > span {
+    
+            & > .descr__container {
+                padding: 10px;
+    
+                & .name {
+                    display: inline-block;
+                    font-size: 20px;
+                    color: var(--main_vv);
+                    font-weight: 700;
+                    text-align: left;
+                    width: 100%;
+                }
+    
+                & > .colors__container {
+                    margin-top: 7px;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    flex-wrap: wrap;
+    
+                    & > span {
+                        font-size: 20px;
+                        color: var(--lang-text_add);
+                        margin-right: 10px;
+                    }
+    
+    
+                    & > .color {
+                        width: 15px;
+                        height: 15px;
+                        border-radius: 50%;
+                        margin: 7px 15px 7px 0px;
+    
+                        &.mixed {
+                            background: conic-gradient(
+                                hsl(360 100% 50%),
+                                hsl(315 100% 50%),
+                                hsl(270 100% 50%),
+                                hsl(225 100% 50%),
+                                hsl(180 100% 50%),
+                                hsl(135 100% 50%),
+                                hsl(90 100% 50%),
+                                hsl(45 100% 50%),
+                                hsl(0 100% 50%)
+                              );
+                        }
+                    }
+        
+        
+                }
+    
+                & .price {
+                    display: inline-block;
                     font-size: 20px;
                     color: var(--lang-text_add);
-                    margin-right: 10px;
+                    margin-top: 10px;
                 }
-
-
-                & > .color {
-                    width: 15px;
-                    height: 15px;
-                    border-radius: 50%;
-                    margin: 7px 15px 7px 0px;
-
-                    &.mixed {
-                        background: conic-gradient(
-                            hsl(360 100% 50%),
-                            hsl(315 100% 50%),
-                            hsl(270 100% 50%),
-                            hsl(225 100% 50%),
-                            hsl(180 100% 50%),
-                            hsl(135 100% 50%),
-                            hsl(90 100% 50%),
-                            hsl(45 100% 50%),
-                            hsl(0 100% 50%)
-                          );
-                    }
-                }
-    
-    
             }
-
-            & .price {
-                display: inline-block;
-                font-size: 20px;
-                color: var(--lang-text_add);
-                margin-top: 10px;
-            }
+    
         }
-
     }
+
 }
