--- a/src/components/Spliders/Preview/splider-preview.scss
+++ b/src/components/Spliders/Preview/splider-preview.scss
@@ -1,6 +1,6 @@
 @use "/src/assets/css/variables" as *;
 
-
+/*
 .splider_portfolio__modal {
     max-width: 80%;
     height: 80%;
@@ -10,19 +10,43 @@
     }
 }
 
-
+*/
 .splider_preview {
-    margin-left: auto;
-    margin-right: auto;
     height: 100%;
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
     width: 100%;
+    border: 1px solid red;
+
+    @include respond-to(sm) {
+        flex-direction: column-reverse;
+    }
     
     & #modalMain {
-        min-width: 100%;
-        height: calc(100% - 120px);
+        width: 80%;
+        height: calc(100%);
+        position: relative;
+        max-height: 300px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: -3%;
+            height: 50%;
+            width: 2px;
+            background-color: var(--main_vv);
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+            @include respond-to(sm) {
+                display: none;
+            }
+        }
+
+        @include respond-to(sm) {
+            width: 100%;
+        }
 
         & .splide__arrows { 
             width: 100%;
@@ -34,6 +58,8 @@
             }
 
             & .splide__arrow {
+                display: none;
+
                 background-color: transparent;
                 transition: $transition_base;
                 //height: 100%;
@@ -79,16 +105,16 @@
 
             & .splide__slide {
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
                 justify-content: center;
 
                 & img {
                     /*max-height: 100%;
                     width: 100%;
                     object-fit: contain; */
-                    max-width: 100%;
-                    max-height: 100%;
-                    object-fit: contain;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
         }
@@ -98,17 +124,32 @@
 
 
     & #modalThumbs {
-        align-self: flex-end;
-        width: 100%;
+        width: 15%;
+        height: 100%;
+        //padding-top: 5%;
+        //overflow-y: hidden;
+        //max-height: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+
+        @include respond-to(sm) {
+            margin-top: 50px;
+            width: 100%;
+        }
 
        
         & .splide__arrows { 
             width: 100%;
             height: 100%;
             position: absolute;
+            top:0;
 
             @include respond-to(sm) {
-                display: none;
+                //display: none;
+                height: auto;
+
+                top: -25px;
             }
 
             & .splide__arrow {
@@ -139,42 +180,50 @@
 
                 &--prev:hover {
                     & svg {
-                        translate: -10px;
+                        translate: 0px -10px;
                     }
                 }
 
                 &--next:hover {
                     & svg {
-                        translate: 10px;
+                        translate: 0px 10px;
                     }
                 }
             }
         }
-       
-        & .splide__slide {
-            //opacity: 0.4;
-            filter: brightness(0.4);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            max-height: 100px;
-            min-width: 50px;
 
-            &.is-active {
-                //opacity: 1;
+        .splide__track {
+
+            & .splide__slide {
+                //opacity: 0.4;
                 filter: brightness(1);
-                border: none;
-            }
-
-            & img {
-                /*max-height: 100%;
-                width: 100%;
-                object-fit: contain; */
-                max-width: 100%;
-                max-height: 100%;
-                object-fit: cover;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                max-height: 100px;
+                min-width: 100px;
+                min-width: auto;
+                min-height: auto;
+    
+                &.is-active {
+                    //opacity: 1;
+                    filter: brightness(1);
+                    border: none;
+                    border: 1px solid var(--main_vv);
+                }
+    
+                & img {
+                    /*max-height: 100%;
+                    width: 100%;
+                    object-fit: contain; */
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: 50% 50%;
+                }
             }
         }
+       
         
 
     }
