--- a/src/components/Spliders/Single/splider-single.scss
+++ b/src/components/Spliders/Single/splider-single.scss
@@ -15,7 +15,8 @@
         max-height: 90%;
 
         @include respond-to(sm) {
-            height: 50vw;
+            //height: 50vw;
+            max-height: none;
         }
 
         & * {
