--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -44,7 +44,10 @@ section.order {
     
                 @include respond-to(sm) {
                     width: 100%;
-                   // margin-top: 0px;
+                }
+
+                @include respond-to(xs) {
+                    padding: 50px 20px;
                 }
     
                 & > h2 {
@@ -181,7 +184,7 @@ section.order {
                                 padding: 30px 20px;
         
                                 & > svg {
-                                    fill: $light;
+                                    fill: var(--text_contrast);
                                     transform: scale(1.3);
                                     margin-bottom: 10px;
                                 }
@@ -197,17 +200,18 @@ section.order {
                                     }
         
                                     & label:first-child {
+                                        color: var(--text_contrast);
                                         display: inline;
                                         text-decoration: underline;
                                         cursor: pointer;
-                                        color: $light;
-                                        font-size: 18px;
+                                        font-size: 20px;
                                     }
             
                                     & span {
-                                        color: $light;
+                                        color: var(--text_contrast);
+                                        font-weight: 700;
                                         text-align: center;
-                                        font-size: 16px;
+                                        font-size: 18px;
                                         //margin-left: .5rem;
                                         @include respond-to(sm) {
                                             display: none;
