--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -156,6 +156,7 @@
                 width: 100%;
                 display: flex;
                 align-items: center;
+                flex-wrap: wrap;
 
 
                 & > .color {
@@ -163,6 +164,7 @@
                     height: 20px;
                     border-radius: 50%;
                     margin-left: 15px;
+                    margin-top: 10px;
 
                     &.mixed {
                         background: conic-gradient(
