--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -8,6 +8,7 @@ section.product-details {
     .details__block {
         display: flex;
         margin-top: 50px;
+        border: 1px solid red;
 
         @include respond-to(sm) {
             flex-direction: column;
@@ -25,153 +26,17 @@ section.product-details {
                 aspect-ratio: initial;
             }
         }
+
+        .details__descr-order {
+            max-width: 60%;
+            padding: 20px 20px 30px 5%;
+        
+            
+            @include respond-to(sm) {
+                padding: 50px 0px 30px;
+                max-width: 100%;
+            }
+        }
     }
 
-
-    .details__descr {
-        max-width: 60%;
-        padding: 20px 20px 30px 5%;
-
-        
-        @include respond-to(sm) {
-            padding: 50px 0px 30px;
-            max-width: 100%;
-        }
-
-        h2 {
-            text-align: center;
-        }
-
-        .features__container {
-            display: flex;
-            flex-direction: column;
-            
-            & > .feature {
-                margin-top: 15px;
-                & > span, label {
-                    font-size: 18px;
-                    
-                    &:first-of-type {
-                        font-weight: 700;
-                    }
-                }
-
-
-                & > p {
-                    display: inline-block;
-                    margin-top: 0;
-                    text-indent: 0;
-                    margin-top: 5px;
-                }
-
-                & select {
-                    //height: 30px;
-                    margin-left: 10px;
-                    font-size: 18px;
-                    font-weight: 700;
-                    border: 1px solid var(--main_vv);
-                    outline: none;
-                    padding-left: 5px;
-                    padding-right: 10px;
-                }
-            }
-
-            
-            & > .colors__container {
-                margin-top: 10px;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                flex-wrap: wrap;
-
-                & > span {
-                    font-size: 18px;
-                    font-weight: 700;
-                }
-
-
-                & > .color {
-                    width: 20px;
-                    height: 20px;
-                    border-radius: 50%;
-                    margin-left: 15px;
-                    position: relative;
-                    cursor: pointer;
-                    margin-top: 5px;
-
-                    &:not(.disabled):not(.selected) {
-
-                        &::before {
-                            content: '';
-                            position: absolute;
-                            height: 100%;
-                            width: 100%;
-                            scale: 1;
-                            border-radius: 50%;
-                            border: 1px solid transparent;
-                            top: -5%;
-                            left: -5%;
-                            //transform-origin: (center);
-                            //transform: translate(-50%, -50%) rotate(-45deg);
-                            transition: scale $transition_fast, border $transition-fast;
-                        }
-
-                        &:hover::before {
-                            border-color: var(--main_vv);
-                            scale: 1.3
-                        }
-                    }
-                    
-
-                    &.mixed {
-                        background: conic-gradient(
-                            hsl(360 100% 50%),
-                            hsl(315 100% 50%),
-                            hsl(270 100% 50%),
-                            hsl(225 100% 50%),
-                            hsl(180 100% 50%),
-                            hsl(135 100% 50%),
-                            hsl(90 100% 50%),
-                            hsl(45 100% 50%),
-                            hsl(0 100% 50%)
-                          );
-                    }
-
-                    &.selected::before {
-                        content: '';
-                        position: absolute;
-                        height: 140%;
-                        width: 140%;
-                        border-radius: 50%;
-                        border: 3px solid var(--main_vv);
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%) rotate(-45deg);
-                    }
-
-                    &.disabled {
-                        cursor: not-allowed;
-                        &::before, &.disabled::after {
-                            content: '';
-                            width: 150%;
-                            height: 1px;
-                            background-color: var(--main_vv);
-                            position: absolute;
-                            top: 50%;
-                            left: 50%;
-                            transform: translate(-50%, -50%) rotate(-45deg);
-                        }
-                    }
-
-                    &.disabled::after {
-                        transform: translate(-50%, -50%) rotate(45deg);
-                    }
-                }
-    
-    
-            }
-
-        }
-        
-    }   
 }
