--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -138,5 +138,63 @@
         }
 
     }
+
+
+
+
+    /*
+    & .cart-adder {
+
+        width: 100%;
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+
+        & > span:first-of-type {
+            font-size: 22px;
+            font-weight: 700;
+        }
+
+        & input {
+            font-size: 24px;
+            padding-right: 5px;
+            font-weight: 700;
+            outline: none;
+            width: 50px;
+            text-align: end;
+            border: 1px solid var(--main_vv);
+            background-color: var(--text_contrast);
+            color: var(--text);
+            transition: color 1s, background-color 1s;
+        }
+
+        &  .amount-changer {
+            background-color: transparent;
+            outline: none;
+            border: none;
+            font-size: 28px;
+            font-weight: 800;
+            cursor: pointer;
+            transition: color 1s, background-color 1s;
+
+            &:nth-of-type(1) {
+                margin-left: 20px;
+                margin-right: 5px;
+            }
+
+            &:nth-of-type(2) {
+                margin-left: 5px;
+                margin-right: 20px;
+            }
+
+        }
+
+        & .button_news {
+            justify-content: center;
+            padding: 8px 40px;
+        }
+        
+
+    }*/
     
 }   
