--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -29,7 +29,7 @@
         
         & > ul {
             height: 100%;
-            margin-right: 90px;
+            margin-right: 110px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -73,7 +73,7 @@
                     &::before {
                         content: '';
                         bottom: 0;
-                        left: 90%;
+                        left: 0%;
                         width: 0%;
                         height: 3px;
                         background-color: var(--main);
@@ -84,6 +84,7 @@
 
                     
                     &::after {
+                        display: none;
                         content: '';
                         bottom: 0;
                         right: 90%;
@@ -105,7 +106,7 @@
                                /* height: 100%;
                                 top: 0;*/
                             left: 0%;
-                            width: 50%;
+                            width: 100%;
                             background-color: var(--text_contrast);
 
                         }
@@ -114,9 +115,9 @@
                             //transition: color $transition-theme;
                                /* height: 100%;
                                 top: 0;*/
-                            background-color: var(--text_contrast);
+                           /* background-color: var(--text_contrast);
                             right: 0%;
-                            width: 50%;
+                            width: 50%;*/
                         }
 
 
@@ -128,14 +129,21 @@
                         &::before {
                             width: 100%;
                             left: 0;
+                            background-color: var(--text_contrast);
+
                         }
                     }
                 }
             }
-    
-    
-    
 
+        }
+
+        .cart-informer__container {
+            position: absolute;
+            top: -8px;
+            right: -15px;
+            height: 20px;
+            width: 20px;
         }
 
 
@@ -162,7 +170,7 @@
                 & > label {
                     z-index: 200;
                     height: 100%;
-                    margin-left: 20px;
+                    margin-left: 5px;
                     margin-bottom: 5px;
                     cursor: pointer;
                     position: relative;
